// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shades DOM Renders without incident 1`] = `
<withContext(Shades.Provider)
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Shades.Provider
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.h1
      dark={true}
    >
      <h1
        className="shades-h1-14571595172437 shades-element-10496356530578"
      >
        Hello
      </h1>
    </shades.h1>
  </Shades.Provider>
</withContext(Shades.Provider)>
`;

exports[`Shades DOM allows extending multiple generic components 1`] = `
".shades-a-650341851635 {
  font-size: 12px;
  color: blue;
}

.shades-a-650341851635:hover {
  border: 1px solid #ccc;
  text-decoration: underline;
}"
`;

exports[`Shades DOM allows extending multiple generic components 2`] = `
".shades-a-13747910882693 {
  font-size: 12px;
  color: red;
}

.shades-a-13747910882693:hover {
  border: 1px solid #ccc;
  -webkit-text-decoration: dotted;
  text-decoration: dotted;
}"
`;

exports[`Shades DOM properly merges extended style rules 1`] = `
".shades-span-17154989453634 {
  background: black;
  border: 2px solid purple;
  color: white;
  font-weight: 600;
  text-transform: uppercase;
}

.shades-span-17154989453634:hover {
  text-decoration: underline;
  border-color: green;
}"
`;

exports[`Shades DOM renders a block matcher without incident 1`] = `
<withContext(Shades.Provider)
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Shades.Provider
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <div>
      <shades.a
        dark={true}
      >
        <a
          className="shades-a-17361503962046 shades-element-13128135507417"
        >
          Original Linky
        </a>
      </shades.a>
      <shades.a
        dark={true}
      >
        <a
          className="shades-a-17361503962046 shades-element-13128135507417"
        >
          DUPLICATE linky
        </a>
      </shades.a>
    </div>
  </Shades.Provider>
</withContext(Shades.Provider)>
`;

exports[`Shades DOM renders a block matcher without incident 2`] = `
<withContext(Shades.Provider)
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Shades.Provider
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.a
      dark={true}
    >
      <a
        className="shades-a-17361503962046 shades-element-13128135507417"
      >
        Hello
      </a>
    </shades.a>
  </Shades.Provider>
</withContext(Shades.Provider)>
`;

exports[`Shades DOM renders a block matcher without incident 3`] = `
<withContext(Shades.Provider)
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Shades.Provider
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.a>
      <a
        className="shades-a-8244443886614 shades-element-13128135507417"
      >
        No Props!
      </a>
    </shades.a>
  </Shades.Provider>
</withContext(Shades.Provider)>
`;

exports[`Shades DOM should allow styles to apply to custom components 1`] = `
<withContext(Shades.Provider)
  prefixer={true}
  to={
    <span>
      <style
        data-shades=""
      />
    </span>
  }
>
  <Shades.Provider
    prefixer={true}
    to={
      <span>
        <style
          data-shades=""
        />
      </span>
    }
  >
    <shades.generic>
      <Component
        className="shades-generic-13196722402662 shades-element-2116950705577"
      >
        <div
          className="shades-generic-13196722402662 shades-element-2116950705577"
        >
          Hello this is a test
        </div>
      </Component>
    </shades.generic>
  </Shades.Provider>
</withContext(Shades.Provider)>
`;
